--- a/kpi.html
+++ b/kpi.html
@@ -17,14 +17,14 @@
 
 
         <div class="kpi" data-cal="1760"></div>
+        <div class="kpi-calories" data-carbonhidratos="28" data-grasa="54" data-proteina="18"></div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="kpi.js"></script>
 
         <script>
             $(document).ready(function() {
-                $('.kpi').kpi();
-
+                $('.kpi').kpiIdr();
+                $('.kpi-calories').kpiCalories();
             });
-
         </script>
     </body></html>
