--- a/kpi.html
+++ b/kpi.html
@@ -16,7 +16,7 @@
     <body>
 
 
-        <div class="kpi" data-cal="1760"></div>
+        <div class="kpi" data-cal="1760" data-carbonhidratos="28" data-grasa="54" data-proteina="18"></div>
         <div class="kpi-calories" data-carbonhidratos="28" data-grasa="54" data-proteina="18"></div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="kpi.js"></script>
