--- a/kpi.html
+++ b/kpi.html
@@ -18,19 +18,22 @@
 
 
 
-        <div class="kpi" data-cal="589"
-             data-carbonhidratos="0"
-             data-grasa="43"
-             data-proteina="8">
-        </div>
+        <div class="kpi" 
+		                             data-cal='484,0000'
+		                             data-carbonhidratos='0'
+		                             data-grasa='42'
+		                             data-proteina='58'>
+		                        </div>
 
 
-        <div class="kpi-calories" 
-             data-cal='484,0000'
-             data-carbonhidratos=''
-             data-grasa=''
-             data-proteina=''>
-        </div>
+
+        <div class="kpi-calories"
+                                 data-cal='484,0000'
+                                 data-carbonhidratos='0'
+                                 data-grasa='42'
+                                 data-proteina='58'>
+                            </div>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="kpi.js"></script>
 
